--- a/templates/home.html
+++ b/templates/home.html
@@ -6,8 +6,10 @@
 </head>
 <body>
     <h1>Vice Versa</h1>
-    <textarea cols="50" rows="10" name="usertext"></textarea>
-    <br><br>
-    <input type="submit" value="Reverse!">
+    <form action="{% url 'reverse' %}">
+        <textarea cols="50" rows="10" name="usertext"></textarea>
+        <br><br>
+        <input type="submit" value="Reverse!">
+    </form>
 </body>
 </html>
